Fix PNC page iteration.